style: standardize CSS variable naming and formatting in globals.css and tailwind.config.ts

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   :root {
-    --text-primary: #6A3AA2;
-    --text-secondary: #4A5568;
-    --secondary: #FBFBFF;
-    --border: #E6E6E6;
+    --text-primary: #6a3aa2;
+    --text-secondary: #4a5568;
+    --secondary: #fbfbff;
+    --border: #e6e6e6;
     --box-shadow: 2px 2px 6px 0px #543c9740;
     --font-open-sans: "Open Sans", sans-serif;
   }
