style: refactor CSS variable names for consistency in globals.css and tailwind.config.ts

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,9 @@
 
 @layer base {
   :root {
-    --text-primary: #6a3aa2;
-    --text-secondary: #4a5568;
+    --primary: #6a3aa2;
     --secondary: #fbfbff;
     --border: #e6e6e6;
-    --box-shadow: 2px 2px 6px 0px #543c9740;
-    --font-open-sans: "Open Sans", sans-serif;
   }
 }
 
